# keys-keeper

./: .gitignore  README.md  pyproject.toml
docs/landing/: Dockerfile
skills/keys-keeper/: SKILL.md
skills/keys-keeper/references/: examples.md
src/keys_keeper/: api.py  audit.py  backend.py  cli.py  composition.py  models.py  pages.py  paths.py  server.py  ssh_runner.py  store.py
src/keys_keeper/static/: app.css  app.js
src/keys_keeper/templates/: base.html  dashboard.html  entry_detail.html
tests/: conftest.py  test_backend.py  test_cli_add.py  test_cli_copy_inject.py  test_cli_doctor.py  test_cli_read.py  test_cli_ssh.py  test_paths.py  test_server_api.py  test_server_auth.py  test_server_pages.py
