[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keys-keeper"
version = "0.1.0"
description = "Personal macOS secrets manager — CLI + local admin + Claude skill"
requires-python = ">=3.10"
authors = [{name = "kuzdes"}]
dependencies = [
    "jinja2>=3.1",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
keys = "keys_keeper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/keys_keeper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
